# lisette

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  lefthook.yaml  plan-issue-84.md  release-plz.toml
bindgen/: LICENSE  README.md  bindgen.external.json  bindgen.stdlib.json  doc.go  go.mod  go.sum  justfile  main.go
docs/: 404.html  CNAME  index.html
fuzz/: Cargo.toml  lisette.dict
fuzz/fuzz_targets/: infer.rs  parse.rs
fuzz/seed_corpus/: assign_compound.lis  binary_ops.lis  block_expression.lis  call_type_args.lis  channel_ops.lis  const_decl.lis  defer_stmt.lis  doc_comments.lis  e2e_control_flow.lis  e2e_lambda_closures.lis  e2e_method_chain.lis  e2e_or_pattern_guard.lis  e2e_struct_nested.lis  e2e_try_block.lis  e2e_while_let.lis  enum_adt.lis  enum_basic.lis  enum_methods.lis  enum_struct_variant.lis  enum_value.lis  enum_variant_rest.lis  field_access.lis  fn_basic.lis  fn_generic.lis  fn_generic_bounded.lis  fn_higher_order.lis  fn_nested.lis  fn_pub.lis  fn_recursive.lis  for_loop.lis  format_string.lis  if_else.lis  if_let.lis  impl_basic.lis  impl_generic.lis  import_mixed.lis  index_access.lis  interface_def.lis  json_attributes.lis  lambda_advanced.lis  (+42 more)
playground/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
prelude/: README.md  assert.go  channel.go  doc.go  example_test.go  go.mod  justfile  map.go  option.go  option_test.go  panic.go  prelude.d.lis  range.go  result.go  result_test.go  slice.go  tuple.go
tests/: Cargo.toml  lsp.rs  lsp_harness.rs  (+1 more)
(+2855 files in other folders)
